[package]
name = "leptos_color"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1.0.0"
leptos = "0.6.0"
leptos_meta = { version = "0.6.0", optional = true }
leptos-use = { version = "0.13.0", default-features = false, features = [
    "use_css_var","use_event_listener",
] }
web-sys = { version = "0.3.70", features = [
    "DomRect",
    "Element",
    "TouchEvent",
    "TouchEventInit",
    "TouchList",
    "Touch",
    "TouchInit",
] }
wasm-bindgen = "0.2.93"
csscolorparser = "0.7.0"
floating-ui-leptos = { version = "0.1.0", optional = true }
[features]
csr = ["leptos/csr"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos-use/ssr"]
hydrate = ["leptos/hydrate"]
color_input = ["dep:floating-ui-leptos"]
