[package]
name = "leptos_color"
version = "0.7.0"
edition = "2021"
license = "MIT"
authors = ["Tim Persigehl <dev@timtom2016.com>"]
description = "Leptos Color is a simple Crate that gives access to a color picker for leptos"
documentation = "https://docs.rs/leptos_color/latest/"
repository = "https://github.com/TimTom2016/leptos_color"
keywords = ["leptos", "color", "picker"]
categories = ["wasm", "web-programming", "visualization"]
readme = "README.md"

[dependencies]
cfg-if = "1.0.0"
leptos = "0.7.0"
leptos_meta = { version = "0.7.0", optional = true }
leptos-use = { version = "0.15.0", default-features = false, features = [
    "use_css_var",
    "use_event_listener",
] }
web-sys = { version = "0.3.70", features = [
    "DomRect",
    "Element",
    "TouchEvent",
    "TouchEventInit",
    "TouchList",
    "Touch",
    "TouchInit",
] }
csscolorparser = "0.7.0"
floating-ui-leptos = { version = "0.2.0", optional = true }
send_wrapper = { version = "0.6.0", optional = true }
leptos-node-ref = { version = "0.0.3", optional = true }

[features]
default = ["color_input"]
csr = ["leptos/csr"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos-use/ssr"]
hydrate = ["leptos/hydrate"]
color_input = [
    "dep:floating-ui-leptos",
    "dep:send_wrapper",
    "dep:leptos-node-ref",
]
